--- a/exciting_notebook.ipynb
+++ b/exciting_notebook.ipynb
@@ -7,8 +7,7 @@
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "import matplotlib.pyplot as pl\n",
-    "import random as rn"
+    "import matplotlib.pyplot as pl\n"
    ]
   },
   {
@@ -42,7 +41,7 @@
    "source": [
     "x = np.arange(20)\n",
     "y = [n**3 for n in x]\n",
-    "a,b = rn.randint(1,20),rn.randint(1,7000)\n",
+    "a,b = np.random.randint(1,20),np.random.randint(1,7000)\n",
     "pl.plot(x,y)\n",
     "pl.scatter(a,b)"
    ]
